<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/schedule_item_padding"
    tools:context=".ui.schedule.ScheduleActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/lblHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstHour"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imgSession"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/lblHour"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/bodystep"/>

    <!-- Description -->
    <TextView
        android:id="@+id/lblTitleSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultSession"
        android:paddingStart="@dimen/schedule_item_padding"
        app:layout_constraintTop_toBottomOf="@id/lblHour"
        app:layout_constraintLeft_toRightOf="@id/imgSession"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/lblTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTrainer"
        android:paddingStart="@dimen/schedule_item_padding"
        app:layout_constraintTop_toBottomOf="@id/lblTitleSession"
        app:layout_constraintLeft_toRightOf="@id/imgSession"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/lblRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultRoom"
        android:paddingStart="@dimen/schedule_item_padding"
        app:layout_constraintTop_toBottomOf="@id/lblTrainer"
        app:layout_constraintLeft_toRightOf="@id/imgSession"
        tools:ignore="RtlSymmetry" />

    <!-- Button -->
    <Button
        android:id="@+id/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_item_join"
        android:background="@drawable/schedule_btn_join_background"
        app:layout_constraintTop_toBottomOf="@id/lblHour"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/lblParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultParticipants"
        android:paddingStart="@dimen/schedule_item_padding"
        app:layout_constraintTop_toBottomOf="@id/btnJoin"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>