<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.ScheduleActivity">

    <LinearLayout
        android:id="@+id/selectDayWeek"
        android:layout_width="0dp"
        android:layout_height="@dimen/schedule_item_padding"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/sltMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_mon"
            android:textColor="@color/white"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"
            android:paddingEnd="@dimen/schedule_lblEmptyView_drawablePadding"
            android:background="@drawable/schedule_btn_quit_background"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/sltTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_tue"
            android:textColor="@color/white"
            android:background="@drawable/schedule_btn_quit_background"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"
            android:paddingEnd="@dimen/schedule_lblEmptyView_drawablePadding"/>
        <TextView
            android:id="@+id/sltWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_wed"
            android:textColor="@color/white"
            android:background="@drawable/schedule_btn_quit_background"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"
            android:paddingEnd="@dimen/schedule_lblEmptyView_drawablePadding"/>
        <TextView
            android:id="@+id/sltThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_thu"
            android:textColor="@color/white"
            android:background="@drawable/schedule_btn_quit_background"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"
            android:paddingEnd="@dimen/schedule_lblEmptyView_drawablePadding"/>
        <TextView
            android:id="@+id/sltFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_fri"
            android:textColor="@color/white"
            android:background="@drawable/schedule_btn_quit_background"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"
            android:paddingEnd="@dimen/schedule_lblEmptyView_drawablePadding"/>
        <TextView
            android:id="@+id/sltSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_sat"
            android:textColor="@color/white"
            android:background="@drawable/schedule_btn_quit_background"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"
            android:paddingEnd="@dimen/schedule_lblEmptyView_drawablePadding"/>
        <TextView
            android:id="@+id/sltSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_sun"
            android:textColor="@color/white"
            android:background="@drawable/schedule_btn_quit_background"
            android:paddingStart="@dimen/schedule_lblEmptyView_drawablePadding"/>
    </LinearLayout>

    <TextView
        android:id="@+id/currentDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultDay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDayWeek"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstSession"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentDay"
        tools:listitem="@layout/schedule_activity_item"/>

    <TextView
        android:id="@+id/lblEmptyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/schedule_lblEmptyView_drawablePadding"
        android:gravity="center"
        android:text="@string/session_not_found"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/design_default_color_primary_dark"
        app:drawableTint="@color/primary"
        app:drawableTopCompat="@drawable/ic_no_sessions"
        app:layout_constraintBottom_toBottomOf="@+id/lstSession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lstSession" />

</androidx.constraintlayout.widget.ConstraintLayout>