<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trainingsession.TrainingSessionActivity">

    <ImageView
        android:id="@+id/imgSession"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bodycombat"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/lblSessionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgSession"
        android:text="@string/defaultSession"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/schedule_item_padding"
        android:layout_marginStart="@dimen/schedule_item_padding"/>
    <TextView
        android:id="@+id/lblSessionTrainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblSessionTitle"
        android:text="@string/defaultTrainer"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/schedule_item_padding"
        android:layout_marginStart="@dimen/schedule_item_padding"/>
    <TextView
        android:id="@+id/lblSessionDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblSessionTrainer"
        android:text="@string/defaultDay"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/schedule_item_padding"
        android:layout_marginStart="@dimen/schedule_item_padding"/>




    <!-- Para la barra baja
    <RelativeLayout
        android:id="@+id/llAddTaskPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/tasks_llAddTaskPanel_horizontal_padding"
        android:paddingTop="@dimen/tasks_llAddTaskPanel_vertical_padding"
        android:paddingEnd="@dimen/tasks_llAddTaskPanel_horizontal_padding"
        android:paddingBottom="@dimen/tasks_llAddTaskPanel_vertical_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">




    </RelativeLayout>

    -->

</androidx.constraintlayout.widget.ConstraintLayout>